// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkDatepicker "readOnly" can be overriden in "inputProps" 1`] = `
<input
  aria-atomic="true"
  aria-invalid={false}
  aria-label="Monday, 15th February 2010"
  aria-live="assertive"
  className="bpk-input bpk-input--large bpk-input--with-open-events bpk-datepicker__input"
  id="myDatepicker"
  name="myDatepicker_input"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  placeholder="placeholder"
  readOnly={false}
  type="text"
  value="15/02/2010"
/>
`;

exports[`BpkDatepicker should render correctly 1`] = `
<input
  aria-atomic="true"
  aria-invalid={false}
  aria-label="Monday, 15th February 2010"
  aria-live="assertive"
  className="bpk-input bpk-input--large bpk-input--with-open-events bpk-datepicker__input"
  id="myDatepicker"
  name="myDatepicker_input"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  placeholder="placeholder"
  readOnly={true}
  type="text"
  value="15/02/2010"
/>
`;
